--- a/package.json
+++ b/package.json
@@ -3,5 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Vytautas Povilaitis",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "fastify": "^4.20.0",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
+  }
 }
