--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "start:dev": "nodemon --watch-dir server --ext \"ts,json\" --exec \"NODE_PATH=server:$NODE_PATH tsx server/server.ts --dev\""
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
