--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "start:dev": "nodemon --watch-dir server --ext \"ts,json\" --exec \"NODE_PATH=server:$NODE_PATH tsx server/server.ts --dev\""
   },
   "dependencies": {
+    "@fastify/swagger": "^8.8.0",
+    "@fastify/swagger-ui": "^1.9.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
+    "fastify-type-provider-zod": "^1.1.9",
     "zod": "^3.21.4",
     "zod-error": "^1.5.0"
   },
