--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
     "fastify-type-provider-zod": "^1.1.9",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4",
     "zod-error": "^1.5.0"
   },
@@ -27,6 +28,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.4",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
