--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
     "fastify-type-provider-zod": "^1.1.9",
+    "jsonwebtoken": "^9.0.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4",
     "zod-error": "^1.5.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.4",
     "@types/supertest": "^2.0.12",
