--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fastify/swagger": "^8.8.0",
     "@fastify/swagger-ui": "^1.9.3",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
     "fastify-type-provider-zod": "^1.1.9",
@@ -26,6 +27,7 @@
     "zod-error": "^1.5.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.4",
