--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "setup": "tsx scripts/setup.ts",
     "lint": "eslint .",
     "typecheck": "tsc -b",
     "typecheck:watch": "tsc -b --watch",
@@ -27,6 +28,7 @@
     "zod-error": "^1.5.0"
   },
   "devDependencies": {
+    "@inquirer/prompts": "^3.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
@@ -37,8 +39,10 @@
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
     "expect": "^29.6.1",
+    "inquirer": "^9.2.8",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
+    "rsa-keypair": "^2.0.2",
     "supertest": "^6.3.3",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
