--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,6 +22,10 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
   },
+  "typeRoots": [
+    "types",
+    "node_modules/@types"
+  ],
   "include": [
     "**/*.ts"
   ]
