--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "setup": "tsx scripts/setup.ts",
+    "setup:prod": "tsx scripts/setup.ts production",
+    "setup:dev": "tsx scripts/setup.ts development",
+    "setup:test": "tsx scripts/setup.ts test",
     "lint": "eslint .",
     "typecheck": "tsc -b",
     "typecheck:watch": "tsc -b --watch",
@@ -23,6 +25,7 @@
     "fastify": "^4.20.0",
     "fastify-type-provider-zod": "^1.1.9",
     "jsonwebtoken": "^9.0.1",
+    "pg": "^8.11.1",
     "uuid": "^9.0.0",
     "zod": "^3.21.4",
     "zod-error": "^1.5.0"
@@ -33,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.4",
+    "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
